style.css
/* general */

@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");

* {
  margin: 0;
  padding: 0;
}

body {
  font-family: "Poppins", sans-serif;
}

html {
  scroll-behavior: smooth;
}

/* transition */

a,
.btn {
  transition: all 300ms ease;
}

/* desktop nav */

nav,
.nav-links {
  display: flex;
}

nav {
  display: flex;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 1000;
  background-color: rgba(255, 255, 255, 0.7);
  backdrop-filter: blur(2px);
  justify-content: space-between;
  align-items: center;
  padding: 0 2rem;
  height: 6vh;
  box-sizing: border-box;
}

.nav-links {
  display: flex;
  gap: 2rem;
  list-style: none;
  font-size: 1.5rem;
}

a {
  color: black;
  text-decoration: none;
  text-decoration-color: white;
}

a:hover {
  color: grey;
  text-decoration: underline;
  text-underline-offset: 0.5rem;
  text-decoration-color: rgb(181, 181, 181);
}

.logo {
  font-size: 2rem;
}

.logo:hover {
  cursor: default;
}

/* hamburger menu */

#hamburger-nav {
  display: none;
}

.hamburger-menu {
  position: relative;
  display: inline-block;
}

.hamburger-icon {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 24px;
  width: 30px;
  cursor: pointer;
}

.hamburger-icon span {
  width: 100%;
  height: 2px;
  background-color: black;
  transition: all 0.3 ease-in-out;
}

.menu-links {
  position: absolute;
  top: 100%;
  right: 0;
  background-color: white;
  width: fit-content;
  max-height: 0;
  overflow: hidden;
  transition: all 0.3 ease-in-out;
}

.menu-links a {
  display: block;
  padding: 10px;
  text-align: center;
  font-size: 1.5rem;
  color: black;
  text-decoration: none;
  transition: all 0.3 ease-in-out;
}

.menu-links li {
  list-style: none;
}

.menu-links.open {
  max-height: 300px;
}

.hamburger-icon.open span:first-child {
  transform: rotate(45deg) translate(10px, 5px);
}

.hamburger-icon.open span:nth-child(2) {
  opacity: 0;
}

.hamburger-icon.open span:last-child {
  transform: rotate(-45deg) translate(10px, -5px);
}

.hamburger-icon span:first-child {
  transform: none;
}

.hamburger-icon span:first-child {
  opacity: 1;
}

.hamburger-icon span:first-child {
  transform: none;
}

/* sections */

section {
  padding-top: 4vh;
  height: 96vh;
  margin: 0 10rem;
  box-sizing: border-box;
  min-height: fit-content;
}

.section-container {
  display: flex;
}

/* icons */

.icon i {
  font-size: 50px;
}

/* buttons */

.btn-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  gap: 1rem;
}

.btn {
  font-weight: 600;
  transition: all 300ms ease;
  padding: 1rem;
  width: 8rem;
  border-radius: 2rem;
  background: none;
  border: black 0.1rem solid;
}

.btn:hover {
  border: white 0.1rem solid;
  background: black;
  color: white;
}

/* about section */

#about {
  display: flex;
  justify-content: center;
  gap: 5rem;
}

.section-pic-container {
  display: flex;
  height: 400px;
  width: 400px;
  margin: auto 0;
}

.section-text {
  align-self: center;
  text-align: center;
}

.section-text p {
  font-weight: 600;
}

.section-text-p1 {
  text-align: center;
}

.section-text-p2 {
  font-size: 1.75rem;
  margin-bottom: 1rem;
}

.title {
  font-size: 3rem;
  text-align: center;
}

#socials-container {
  display: flex;
  justify-content: center;
  margin-top: 1rem;
  gap: 1rem;
}

.about-container {
  gap: 2rem;
  margin-bottom: 2rem;
  margin-top: 2rem;
}

.about-container {
  display: flex;
}

/* work */

#work {
  position: relative;
}

.color-container {
  border-color: black;
  background: white;
}

.work-img {
  border-radius: 2rem;
  width: 90%;
  height: 90%;
}

.work-title {
  margin: 1rem;
  color: black;
}

.work-btn {
  color: black;
  border-color: black;
}

.details-container {
  padding: 1.5rem;
  background: white;
  border-radius: 2rem;
  border: black 0.1rem solid;
  text-align: center;
  width: auto;
}

.tech-sub-title {
  font-weight: 600;
  font-size: 2rem;
  margin-bottom: 2rem;
}

.tech-details-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  gap: 2rem;
}

.coming-soon {
  filter: blur(5px);
}

.article-container {
  position: relative;
  text-align: center;
  color: white;
}

.article-container p {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-size: 40px;
  color: white;
  font-weight: 600;
  -webkit-text-stroke: 2px black;
}

/* contact section */

#contact {
  display: flex;
  justify-content: center;
  flex-direction: column;
  /* height: 70vh; */
}

.contact-info-upper-container {
  display: flex;
  justify-content: center;
  border-radius: 2rem;
  border: black 0.1rem solid;
  background: white;
  margin: 2rem auto;
  padding: 0.5rem;
}

.contact-info-container {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 0.3rem;
  margin: 1rem;
}

.contact-info-container p {
  font-size: larger;
}

.contact-icon {
  height: 20rem;
}
.contact-info-container i {
  font-size: 25px;
}

/* footer */

#footer {
  height: 26vh;
  margin: 0 1rem;
}

footer p {
  text-align: center;
}

